# Supply-chain-Optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
supply_chain_optimization/: __init__.py  config.py  main.py
supply_chain_optimization/data/: __init__.py  distances.py  models.py  openrouteservice_client.py  scenarios.py
supply_chain_optimization/hybrid/: __init__.py  coordinator.py  repair.py
supply_chain_optimization/stage1_qubo/: __init__.py  constraints.py  penalties.py  qaoa_solver.py  qubo_builder.py
supply_chain_optimization/stage2_milp/: __init__.py  milp_model.py  solver.py
supply_chain_optimization/ui/: __init__.py  app.py
supply_chain_optimization/utils/: __init__.py  visualization.py
tests/: __init__.py  benchmark_scalability.py  run_full_validation.py  test_ibm_quantum.py  validate_accuracy.py
