[project]
name = "supply-chain-optimization"
version = "0.1.0"
description = "Quantum-enabled supply chain optimization using QUBO/QAOA and MILP"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "qiskit>=1.3.0",
    "qiskit-optimization>=0.7.0",
    "qiskit-algorithms>=0.3.1",
    "qiskit-aer>=0.15.0",
    "pulp>=2.8.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "networkx>=3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
